--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.0",
+    "eth-sig-util": "^3.0.1",
     "hardhat": "^2.0.10"
   },
   "devDependencies": {
